Fix overflow

--- a/mdx-layout-core/src/CoreLayout.scss
+++ b/mdx-layout-core/src/CoreLayout.scss
@@ -14,8 +14,10 @@ article {
   margin-left: auto;
   margin-right: auto;
   overflow: auto;
+  box-sizing: border-box;
+  width: 100%;
   max-width: 800px;
-  padding: 1rem;
+  padding: 0 1rem;
 }
 
 footer {
